POKE : Update responsive table

--- a/POKE/index.html
+++ b/POKE/index.html
@@ -128,25 +128,25 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>
+                                <th class="name">
                                     Location Name
                                     <img src="../HELP/icone/fleche_tri.svg" alt="sort">
                                 </th>
-                                <th>
+                                <th class="edges">
                                     Edges
                                     <img src="../HELP/icone/fleche_tri.svg" alt="sort">
                                 </th>
-                                <th>
+                                <th class="status">
                                     Status
                                     <img src="../HELP/icone/fleche_tri.svg" alt="sort">
                                 </th>
-                                <th id="button-col"></th>
+                                <th id="button-col" class="button"></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Location SOPHIA-ANTIPOLIS</td>
-                                <td>2</td>
+                                <td class="name">Location SOPHIA-ANTIPOLIS</td>
+                                <td class="edges">2</td>
                                 <td>
                                     <div class="status">
                                         <span>Active</span>
@@ -159,8 +159,8 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>Location PARIS</td>
-                                <td>4</td>
+                                <td class="name">Location PARIS</td>
+                                <td class="edges">4</td>
                                 <td>
                                     <div class="status">
                                         <span>Active</span>
@@ -173,8 +173,8 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>Location KUALA LUMPUR</td>
-                                <td>1</td>
+                                <td class="name">Location KUALA LUMPUR</td>
+                                <td class="edges">1</td>
                                 <td>
                                     <div class="status">
                                         <span>Degraded</span>
@@ -188,8 +188,8 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>Location HONG-KONG</td>
-                                <td>2</td>
+                                <td class="name">Location HONG-KONG</td>
+                                <td class="edges">2</td>
                                 <td>
                                     <div class="status">
                                         <span>Degraded</span>
@@ -202,8 +202,8 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>Location WASHINGTON D.C.</td>
-                                <td>1</td>
+                                <td class="name">Location WASHINGTON D.C.</td>
+                                <td class="edges">1</td>
                                 <td>
                                     <div class="status">
                                         <span>Inactive</span>
@@ -216,8 +216,8 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>Location LOS ANGELES</td>
-                                <td>1</td>
+                                <td class="name">Location LOS ANGELES</td>
+                                <td class="edges">1</td>
                                 <td>
                                     <div class="status">
                                         <span>Inactive</span>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="pager">
                         <a href="#"><img src="../HELP/icone/fleche_horizontale_g.svg" alt=""></a>
-                        <a href="#">1</a>
+                        <a href="#" id="current_page">1</a>
                         <a href="#">2</a>
                         <a href="#">3</a>
                         <a>...</a>
