--- a/HELP/index.html
+++ b/HELP/index.html
@@ -22,17 +22,18 @@
 
   <div id="top-bar">
     <div class="navbar">
-    <a> <img src="icone/icone_site.svg" alt="logo site"> </a>
-    <a href="#home">My Network</a>
-    <a href="#news">Solutions</a>
+      <div id="logo-desktop">
+        <a><img src="icone/icone_site.svg" alt="logo site"></a>
+    <a href="index.html">My Network</a>
+    <a href="NAPS/index.html">Solutions (NAPS)</a>
     <div class="dropdown">
       <button class="dropbtn">Regions
         <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
       </button>
       <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="4VVV/index.html">4VVV</a>
+        <a href="RAND/index.html">RAND</a>
+        <a href="POKE/index.html">POKE</a>
       </div>
     </div>
       <div class="dropdown">
@@ -40,12 +41,24 @@
           <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+          <a href="AZIL/index.html">AZIL</a>
+          <a href="HELP/index.html">HELP</a>
+        </div>
         </div>
       </div>
-
+      <div id="logo-phone">
+        <div class="dropdown">
+        <button class="dropbtn">
+          <img src="icone/icone_site.svg" alt="logo site">
+        </button>
+        <div class="dropdown-content">
+          <a href="4VVV/index.html">4VVV</a>
+          <a href="RAND/index.html">RAND</a>
+          <a href="POKE/index.html">POKE</a>
+        </div>
+        </div>
+          <a> Home > Networking > Flexible </a>
+      </div>
   </div>
   </div>
 
