POKE : remove table navigation on map

--- a/POKE/index.html
+++ b/POKE/index.html
@@ -397,7 +397,7 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="table-navigation">
+                <div id="table-navigation">
                     <div class="select-entries">
                         <select>
                             <option value="10">Show 10 entries</option>
