--- a/RAND/index.html
+++ b/RAND/index.html
@@ -12,12 +12,12 @@
 
   <div id="top-bar">
     <div class="navbar">
-    <a> <img src="icone/icone_site.svg" alt="logo site"> </a>
+    <a> <img src="../HELP/icone/icone_site.svg" alt="logo site"> </a>
     <a href="#home">My Network</a>
     <a href="#news">Solutions</a>
     <div class="dropdown">
       <button class="dropbtn">Regions
-        <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
+        <i class="fa fa-caret-down"><img src="../HELP/icone/fleche_verticale.svg"></i>
       </button>
       <div class="dropdown-content">
         <a href="#">Link 1</a>
@@ -27,7 +27,7 @@
     </div>
       <div class="dropdown">
         <button class="dropbtn">Locations
-          <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
+          <i class="fa fa-caret-down"><img src="../HELP/icone/fleche_verticale.svg"></i>
         </button>
         <div class="dropdown-content">
           <a href="#">Link 1</a>
@@ -231,7 +231,7 @@
                         <td>4</td>
                         <td>30</td>
                         <td>15</td>
-                        <td><button class="">...</button></td>
+                        <td><button class=""><a href="regions_details.html">...</button></td>
                     </tr>
                     <tr>
                         <td><input type="checkbox"></td>
@@ -248,7 +248,7 @@
                         <td>4</td>
                         <td>30</td>
                         <td>15</td>
-                        <td><button class="">...</button></td>
+                        <td><button class=""><a href="regions_details.html">...</button></td>
                     </tr>
                     <tr>
                         <td><input type="checkbox"></td>
@@ -265,7 +265,7 @@
                         <td>4</td>
                         <td>30</td>
                         <td>15</td>
-                        <td><button class="">...</button></td>
+                        <td><button class=""><a href="regions_details.html">...</button></td>
                     </tr>
                     <tr>
                         <td><input type="checkbox"></td>
@@ -277,7 +277,7 @@
                         <td>4</td>
                         <td>30</td>
                         <td>15</td>
-                        <td><button class="">...</button></td>
+                        <td><button class=""><a href="regions_details.html">...</button></td>
                     </tr>
                     <tr>
                         <td><input type="checkbox"></td>
@@ -289,7 +289,7 @@
                         <td>4</td>
                         <td>30</td>
                         <td>15</td>
-                        <td><button class="">...</button></td>
+                        <td><button class=""><a href="regions_details.html">...</button></td>
                     </tr>
                 </tbody>
             </table>
