--- a/RAND/regions_details.html
+++ b/RAND/regions_details.html
@@ -25,17 +25,17 @@
         <div id="top-bar">
             <div class="navbar">
                 <div id="logo-desktop">
-                    <a><img src="icone/icone_site.svg" alt="logo site"></a>
-                    <a href="index.html">My Network</a>
-                    <a href="NAPS/index.html">Solutions (NAPS)</a>
+                    <a><img src="../HELP/icone/icone_site.svg" alt="logo site"></a>
+                    <a href="../HELP/index.html">My Network</a>
+                    <a href="../NAPS/index.html">Solutions (NAPS)</a>
                     <div class="dropdown">
                         <button class="dropbtn">Regions
-                            <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
+                            <i class="fa fa-caret-down"><img src="../HELP/icone/fleche_verticale.svg"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="4VVV/index.html">4VVV</a>
-                            <a href="RAND/index.html">RAND</a>
-                            <a href="POKE/index.html">POKE</a>
+                            <a href="../4VVV/index.html">4VVV</a>
+                            <a href="../RAND/index.html">RAND</a>
+                            <a href="../POKE/index.html">POKE</a>
                         </div>
                     </div>
                     <div class="dropdown">
@@ -43,20 +43,20 @@
                             <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
                         </button>
                         <div class="dropdown-content">
-                            <a href="AZIL/index.html">AZIL</a>
-                            <a href="HELP/index.html">HELP</a>
+                            <a href="../AZIL/index.html">AZIL</a>
+                            <a href="../HELP/index.html">HELP</a>
                         </div>
                     </div>
                 </div>
                 <div id="logo-phone">
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <img src="icone/icone_site.svg" alt="logo site">
+                            <img src="../HELP/icone/icone_site.svg" alt="logo site">
                         </button>
                         <div class="dropdown-content">
-                            <a href="4VVV/index.html">4VVV</a>
-                            <a href="RAND/index.html">RAND</a>
-                            <a href="POKE/index.html">POKE</a>
+                            <a href="../4VVV/index.html">4VVV</a>
+                            <a href="../RAND/index.html">RAND</a>
+                            <a href="../POKE/index.html">POKE</a>
                         </div>
                     </div>
                     <a> Home > Networking > Flexible </a>
