feat: a bit more responsive AZIL page

--- a/AZIL/index.html
+++ b/AZIL/index.html
@@ -6,14 +6,14 @@
 
   <!-- DEBUT LIENS CSS NAVBAR - NE PAS TOUCHER -->
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="styles.css">
   <!-- FIN LIENS CSS NAVBAR - NE PAS TOUCHER -->
 
   <!-- DEBUT INTEGRATION LIENS CSS - VOTRE SECTION -->
 
   <!-- FIN INTEGRATION LIENS CSS - VOTRE SECTION -->
 
-<style>:root{--primary-color:#012c10;--light-grey:#F4F4F4;--white:#ffffff;--primary-font:Inter, sans-serif;--text-color:#000000;--header-color:#CFA40B;--orange:#F16E00;--active:#3DE35A;--degraded:#FFCD0B;--inactive:#E70002}body{font-family:var(--primary-font);margin:0;padding:0}#top-bar{background-color:var(--primary-color);color:var(--white);padding:10px 20px;display:flex;justify-content:space-between;align-items:center}#bottom-bar{padding:10px 20px;font-size:14px;display:flex;align-items:center;background-color:var(--light-grey)}@media screen and (min-width: 400px){#content{display:flex;margin-left:3%}}.navbar{overflow:hidden}.navbar a{float:left;font-size:16px;color:var(--white);text-align:center;padding:14px 16px;text-decoration:none}.dropdown{float:left;overflow:hidden}.dropdown .dropbtn{font-size:16px;border:none;outline:none;color:var(--white);padding:14px 16px;background-color:inherit;font-family:inherit;margin:0}.navbar a:hover,.dropdown:hover .dropbtn{background-color:var(--orange);color:#000}.dropdown-content{display:none;position:absolute;background-color:var(--light-grey);min-width:160px;box-shadow:0 8px 16px #0003;z-index:1}.dropdown-content a{float:none;color:var(--text-color);padding:12px 16px;text-decoration:none;display:block;text-align:left}.dropdown-content a:hover{background-color:#ddd}.dropdown:hover .dropdown-content{display:block}.fa-caret-down{color:var(--orange)}.dropdown:hover .fa-caret-down{color:var(--text-color)}body{font-family:var(--primary-font)}</style><link rel="stylesheet" href="styles.b1ac80e837b12c0f.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.b1ac80e837b12c0f.css"></noscript></head>
+<style>:root{--primary-color:#012c10;--light-grey:#F4F4F4;--white:#ffffff;--grey:#CCCCCC;--primary-font:Inter, sans-serif;--text-color:#000000;--header-color:#CFA40B;--orange:#F16E00;--light-red:#FDE5E6;--light-yellow:#FFFAE7;--active:#3DE35A;--degraded:#FFCD0B;--inactive:#E70002}body{font-family:var(--primary-font);margin:0;padding:0}#top-bar{background-color:var(--primary-color);color:var(--white);padding:10px 20px;display:flex;justify-content:space-between;align-items:center}#bottom-bar{padding:10px 20px;font-size:14px;display:flex;align-items:center;background-color:var(--white)}@media only screen and (max-width: 500px){#logo-desktop{display:none}#bottom-bar{display:none}}@media only screen and (min-width: 501px){#content{display:flex;margin-left:3%}#logo-phone{display:none}#logo-desktop{display:flex}}.navbar{overflow:hidden}.navbar a{float:left;font-size:16px;color:var(--white);text-align:center;padding:14px 16px;text-decoration:none}.dropdown{float:left;overflow:hidden}.dropdown .dropbtn{font-size:16px;border:none;outline:none;color:var(--white);padding:14px 16px;background-color:inherit;font-family:inherit;margin:0}.navbar a:hover,.dropdown:hover .dropbtn{background-color:var(--orange);color:#000}.dropdown-content{display:none;position:absolute;background-color:var(--light-grey);min-width:160px;box-shadow:0 8px 16px #0003;z-index:1}.dropdown-content a{float:none;color:var(--text-color);padding:12px 16px;text-decoration:none;display:block;text-align:left}.dropdown-content a:hover{background-color:#ddd}.dropdown:hover .dropdown-content{display:block}.fa-caret-down{color:var(--orange)}</style><link rel="stylesheet" href="styles.0b6e091a87567848.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.0b6e091a87567848.css"></noscript></head>
 <body>
 
 <!-- DEBUT HTML NAVBAR - PAS TOUCHER -->
@@ -23,38 +23,38 @@
   <div id="top-bar">
     <div class="navbar">
       <div id="logo-desktop">
-        <a><img src="icone/icone_site.svg" alt="logo site"></a>
-        <a href="index.html">My Network</a>
-        <a href="../NAPS/index.html">Solutions (NAPS)</a>
+        <a><img src="Projet Web S6/HELP/icone/icone_site.svg" alt="logo site"></a>
+        <a href="Projet Web S6/HELP/index.html">My Network</a>
+        <a href="Projet Web S6/NAPS/index.html">Solutions (NAPS)</a>
         <div class="dropdown">
           <button class="dropbtn">Regions
-            <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
+            <i class="fa fa-caret-down"><img src="Projet Web S6/HELP/icone/fleche_verticale.svg"></i>
           </button>
           <div class="dropdown-content">
             <a href="Projet Web S6/4VVV/index.html">4VVV</a>
-            <a href="ProjetWebS6/RAND/index.html">RAND</a>
-            <a href="POKE/index.html">POKE</a>
+            <a href="Projet Web S6/RAND/index.html">RAND</a>
+            <a href="Projet Web S6/POKE/index.html">POKE</a>
           </div>
         </div>
         <div class="dropdown">
           <button class="dropbtn">Locations
-            <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
+            <i class="fa fa-caret-down"><img src="Projet Web S6/HELP/icone/fleche_verticale.svg"></i>
           </button>
           <div class="dropdown-content">
-            <a href="AZIL/index.html">AZIL</a>
-            <a href="HELP/index.html">HELP</a>
+            <a href="Projet Web S6/AZIL/index.html">AZIL</a>
+            <a href="Projet Web S6/HELP/index.html">HELP</a>
           </div>
         </div>
       </div>
       <div id="logo-phone">
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="icone/icone_site.svg" alt="logo site">
+            <img src="Projet Web S6/HELP/icone/icone_site.svg" alt="logo site">
           </button>
           <div class="dropdown-content">
-            <a href="4VVV/index.html">4VVV</a>
-            <a href="RAND/index.html">RAND</a>
-            <a href="POKE/index.html">POKE</a>
+            <a href="Projet Web S6/4VVV/index.html">4VVV</a>
+            <a href="Projet Web S6/RAND/index.html">RAND</a>
+            <a href="Projet Web S6/POKE/index.html">POKE</a>
           </div>
         </div>
         <a> Home > Networking > Flexible </a>
@@ -75,5 +75,5 @@
   <!-- FIN HTML CONTENU - VOTRE SECTION -->
 </div>
 
-<script src="runtime.994aac2da0ccf608.js" type="module"></script><script src="polyfills.cf332740b1451e65.js" type="module"></script><script src="main.9d05b01ba3354a66.js" type="module"></script></body>
+<script src="runtime.994aac2da0ccf608.js" type="module"></script><script src="polyfills.cf332740b1451e65.js" type="module"></script><script src="main.c49d6020128fa25d.js" type="module"></script></body>
 </html>
