RAND : updated pager for regions_details

--- a/RAND/regions_details.html
+++ b/RAND/regions_details.html
@@ -343,7 +343,7 @@
             <div id="pager_wrapper">
                 <div class="pager">
                     <a href="#"><img src="../HELP/icone/fleche_horizontale_g.svg" alt=""></a>
-                    <a href="#">1</a>
+                    <a href="#" id="current_page">1</a>
                     <a href="#">2</a>
                     <a href="#">3</a>
                     <a>...</a>
