POKE : Javascript responsive

--- a/POKE/index.html
+++ b/POKE/index.html
@@ -76,7 +76,7 @@
         <!-- DEBUT HTML CONTENU - VOTRE SECTION -->
         <div class="container">
             <div id="top">
-                <h2>Inventory</h2>
+                <h2>Inventory POKE</h2>
                 <div id="inventory">
                     <span>Name</span>
                     <span id="inventory_name">My Business</span>
